<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/backgr2"
    android:layout_height="match_parent"
    android:alpha="0.8"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.annamorgiel.smoothiemaster.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:text="@string/choose_components" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str"
                android:textAppearance="?android:textAppearanceSmall" />

            <CheckBox
                android:id="@+id/ban"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ban"
                android:textAppearance="?android:textAppearanceSmall" />

            <CheckBox
                android:id="@+id/ber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ber"
                android:textAppearance="?android:textAppearanceSmall" />

            <CheckBox
                android:id="@+id/man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/man"
                android:textAppearance="?android:textAppearanceSmall" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"></View>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/hon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hon"
            android:textAppearance="?android:textAppearanceSmall" />

        <CheckBox
            android:id="@+id/map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map"
            android:textAppearance="?android:textAppearanceSmall"
            android:theme="CheckboxTheme" />

        <CheckBox
            android:id="@+id/aga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agave_syrup"
            android:textAppearance="?android:textAppearanceSmall" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"></View>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:textColor="#000000"
        android:text="@string/color_txt" />

    <View
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:id="@+id/view_smoothie_color"
        android:background="#880E4F"></View>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:text="Calories: "/>

        <TextView
            android:layout_width="match_parent"
            android:textColor="#000000"
            android:id="@+id/view_calories"
            android:layout_height="wrap_content"
            android:text="CAL CAL CAL"/>

        <TextView
            android:layout_width="match_parent"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:text="Nutrition Values: "/>

        <TextView
            android:layout_width="match_parent"
            android:textColor="#000000"
            android:id="@+id/view_nutritian"
            android:layout_height="wrap_content"
            android:text="VAL VAL VAL"/>

    </LinearLayout>
</LinearLayout>
